--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bip-39-tools-web",
   "description": "Tools for working with bip-39 mnemonic seed phrases",
   "author": "Peter Hancock",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,8 +13,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
